# FluxID

./: Flux-PRD.md  FluxID-UI-Wireframe(Demo-Optimized).md  FluxID-projectflow.md  FluxID-whyflux.md  README.md
backend/: .env.example  package-lock.json
backend/src/: app.ts
docs/: Flux-PRD.md  FluxID-projectflow.md  ISSUES-BACKEND-AI.md  ISSUES-FRONTEND.md  ISSUES-SMARTCONTRACT.md  SMARTCONTRACT_DEPLOYMENT-GUIDE.md  SMARTCONTRACT_GUIDE.md  demo-wallets.txt
docs/api-docs/: README.md  protocol-api.md  wallet-api.md
frontend/: .env.example  README.md  components.json  package-lock.json  package.json
frontend-s/: README.md
frontend-s/app/: layout.tsx
frontend-s/components/: AIChat.tsx  ClientLayout.tsx  Navbar.tsx
frontend-s/context/: Web3Provider.tsx
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx  robots.ts
frontend/components/: AIInsights.tsx  ClientLayout.tsx  Navbar.tsx  RegisterForm.tsx  SecurityNotice.tsx  ThemeToggle.tsx  TimeframeFilter.tsx  TourGuide.tsx  VolatilityCalculator.tsx  sidebar.tsx  transaction-list.tsx
frontend/hooks/: use-inactivity-logout.ts  use-wallet.ts
frontend/lib/: agentDemo.ts  constants.ts  network.ts  protocolApi.ts  scoring.ts  utils.ts
smartcontract/: .gitignore  Cargo.toml  Makefile
smartcontract/contracts/liquidity_identity/: Cargo.toml
x-frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
x-frontend/app/: layout.tsx  providers.tsx  sitemap.ts
x-frontend/components/: AllocationChart.tsx  ErrorBoundary.tsx  HedgingSimulator.tsx  PartnerGuard.tsx  (+9 more)
(+79 files in other folders)
