[package]
name = "liquidity_identity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = ["kv-map"]
kv-map = []
testutils = ["soroban-sdk/testutils"]

